tests/rosetta/out/Pascal/call-an-object-method-1.pas
// Generated by Mochi compiler v0.10.26 on 2025-07-16T10:01:33Z
program CallAnObjectMethod1;
{$mode objfpc}
{$modeswitch nestedprocvars}
uses SysUtils, fgl, fphttpclient, Classes, Variants, fpjson, jsonparser, fpjsonrtti;

type
  generic TArray<T> = array of T;
type Foo = record
end;

var
  _tmp0: Foo;
  _tmp1: Foo;
  myPointer: Foo;
  myValue: Foo;

begin
  myValue := _tmp0;
  myPointer := _tmp1;
  myValue.ValueMethod(0);
  myPointer.PointerMethod(0);
  myPointer.ValueMethod(0);
  myValue.PointerMethod(0);
  myValue.ValueMethod(0);
  myPointer.PointerMethod(0);
end.
